# incanti

./: CMakeLists.txt  docs.md  license.md  readme.md  todo.md
include/: incanti.hpp
src/: test.cpp
